<p> element inside the row of #expo moved from end of the row to end of col-md-3 class to fix the overflowing issue, also changed background colour of #expo to #e26c517d for better visual appereance of the page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,7 @@ body{
     width: 100vw;
     padding-left: 0;
     padding-right: 0;
-    background-color: rgb(78, 35, 19);
+    background-color: #e26c517d;
 }
 
 #box{
